--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,29 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>PersonalPortfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+  <!-- <link rel="preconnect" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" crossorigin> -->
+  <!-- <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" crossorigin> -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap"
+    rel="stylesheet">
 </head>
+
 <body>
   <app-root></app-root>
+  <script>
+    new PerformanceObserver((entryList) => {
+      for (const entry of entryList.getEntriesByName('first-contentful-paint')) {
+        console.log('FCP candidate:', entry.startTime, entry);
+      }
+    }).observe({ type: 'paint', buffered: true });
+  </script>
 </body>
+
 </html>
